# simple-vm

./: Cargo.toml  README.md
bindgen-macro/: Cargo.toml
bindgen-macro/src/: lib.rs
example/compile/: Cargo.toml
example/compile/src/: lib.rs
example/run/: Cargo.toml
example/run/src/: main.rs
primitives/: Cargo.toml
primitives/src/: definitions.rs  framing.rs  hosted.rs  lib.rs
vm/: Cargo.toml
vm/src/: call_context.rs  compiler.rs  config.rs  error.rs  gas.rs  lib.rs  memory.rs  resolver.rs  state.rs
vm/src/ops/: debug.rs  mod.rs  sha256.rs
